--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,10 @@
 eureka:
   instance:
+    hostname: localhost
     prefer-ip-address: true
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
       defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+    
